# prime-oasis

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  README_EN.md
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
results/: result.txt  resultd.txt  results.txt
src/: dstar.c  oasis_divs.c  oasis_layer1.c  oasis_layer2.c  oasis_layer3.c  prime_oases.c  prime_oasis.c  result.txt  xpt.h
tests/: test_runner.c
